--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+JP:wght@100..900&family=Special+Elite&display=swap" rel="stylesheet">
     <title>React App</title>
+    <script src="https://kit.fontawesome.com/7a87b3c7ce.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
