improved logos and seo data

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="skanda sabbagh mustic productions"
-      content="We make bespoke contemporay music for advertising and commercials"
-    />
+   <!-- Updated SEO Meta Tags -->
+   <title>Skanda Sabbagh Music Productions | Bespoke Contemporary Music for Advertising & Commercials</title>
+   <meta name="description" content="Skanda Sabbagh creates bespoke contemporary music for advertising, commercials, and creative projects. We specialize in unique soundtracks that elevate your brand and capture your audience." />
+   <meta name="keywords" content="bespoke music, contemporary music, advertising music, commercial music, Skanda Sabbagh, music productions, soundtracks, advertising, creative projects" />
+
+   <!-- Open Graph Metadata -->
+   <meta property="og:title" content="Skanda Sabbagh Music Productions" />
+   <meta property="og:description" content="We make bespoke contemporary music for advertising and commercials." />
+   <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+   <meta property="og:url" content="https://skandasabbagh.co.uk" />
+   <meta property="og:type" content="website" />
+
+   <!-- Twitter Card Metadata -->
+   <meta name="twitter:card" content="summary_large_image" />
+   <meta name="twitter:title" content="Skanda Sabbagh Music Productions" />
+   <meta name="twitter:description" content="We make bespoke contemporary music for advertising and commercials." />
+   <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
